# 1091-Parallel-Programming

HW1/: url.txt  vectorOP.cpp
HW2/繳交/HW2_309552017/part1/: makefile  pi.cpp
HW2/繳交/part1/: makefile  pi.cpp
HW3/繳交/: bfs.cpp  cg_impl.c  page_rank.cpp
HW4/: plot.py  score.py  活頁簿1.xlsx
HW4/繳交/: url.txt
HW4/繳交/part1/: pi_block_tree.cc  pi_gather.cc  pi_nonblock_linear.cc  pi_one_side.cc  pi_reduce.cc
HW4/繳交/part2/: Makefile  functions.cc
HW5/: testCudaPitch.cu
HW5/繳交/: kernel1.cu  kernel2.cu  kernel3.cu  kernel4.cu  url.txt
HW6/: main.c
HW6/cuda/: Makefile  helper.c  kernel.cu  kernel.h  main.cpp  mandelbrotThread.cpp
HW6/繳交/: hostFE.c  kernel.cl  url.txt  活頁簿1.xlsx
HW6/繳交/HW6_309552017_last/: hostFE.c  kernel.cl
OpenMP/: CMakeLists.txt  Makefile  MedianFilter  MedianFilter_omp.cpp
Original/: CMakeLists.txt  MedianFilter.cpp  cmake_install.cmake
Project/: README.md  preprocessing.py
Project/OpenMP/: cmake_install.cmake
Project/Original/: Makefile  MedianFilter
Project/SIMD/: CMakeLists.txt  MedianFilterSIMD  MedianFilter_SIMD.cpp  cmake_install.cmake
Project/SIMD+OpenMP/: CMakeLists.txt  Makefile  MedianFilterSIMDOMP  MedianFilter_SIMD_OMP.cpp  cmake_install.cmake
Project/SIMD_avx256/: MedianFilter_SIMD_sort.cpp  cmake_install.cmake
Project/Thread/: CMakeLists.txt  Makefile  MedianFilter  MedianFilterThread  MedianFilter_pthread.cpp  cmake_install.cmake
Project/cuda/: read.cpp  write.cpp
SIMD/: Makefile  MedianFilter
SIMD_avx256/: CMakeLists.txt  Makefile  MedianFilterSIMD
cuda/: medianfilter_cuda.cu
(+7 files in other folders)
