cmake_minimum_required(VERSION 2.8)
project(MedianFilterSIMDOMP)
find_package( OpenCV REQUIRED )
find_package( OpenMP REQUIRED )
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_executable( MedianFilter MedianFilter_SIMD_OMP.cpp )
target_link_libraries( MedianFilter ${OpenCV_LIBS} ${OpenMP_CXX_FLAGS} ${CMAKE_SIMDOMP_LIBS_INIT})
